@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - add to standard diagnostic
   - assume installer = ModuleBuild and mb_class = My::ModuleBuild if inc/My/ModuleBuild.pm is found
+  - whitelist some commonly used tech spellings to pod system spelling test
 
 1.45      2014-04-08 11:04:49 -0400
   - allow override of diagnostic reporter with [Test] diag = +/-module or [@ACPS] diag = +/-module
